[BUGFIX] Replace legacy color-yiq with color-contrast - fixes #1511

--- a/Resources/Public/Css/bootstrap5-rte.css
+++ b/Resources/Public/Css/bootstrap5-rte.css
@@ -16906,7 +16906,7 @@ blockquote footer:before {
 .timeline-item-image .caption {
   font-size: .8em;
   padding: 0.5rem 1.5rem;
-  color: color-yiq(#f2f2f2);
+  color: #000000;
   background-color: #f2f2f2;
 }
 
